@@ -8,6 +8,7 @@
 	  Fix improper handling of fread() and fwrite() return values.
 	  Fix improper handling of compare function for qsort.
 	  Handle the newline read in with fgets().
+	  Fix non-ftw directory walk to also check the binary cache.
 	* search.c: Implement the check of the cache.
 	  Implement the addition of new entries on detection of a binary file.
 	* main.c: Call the initialization of the cache and set up for cleanup at termination.
